--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Blog Title"
 author: "Blog Author"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+description: "Made with Jekyll"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
@@ -20,8 +20,9 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
+  - {title: X, icon: x-twitter, url: "https://x.com/suito_kig"}
+  - {title: Bluesky, icon: bluesky, url: "https://bsky.app/profile/suito-kig.bsky.social"}
+  - {title: Github, icon: github, url: "https://github.com/suito-kig"}
   - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
