--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: "Blog Author"
 description: "Made with Jekyll"
 permalink: /:title/
 lang: "en"
-excerpt_separator: "\r\n\r\n\r\n"
+excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
 
 # Layout
