remove url slash
remove url slash

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink: /:title/
 lang: "ja"
 excerpt_separator: "\n\n\n"
 date_format: "%B %d, %Y"
-url: "https://suito-kig.github.io/"
+url: "https://suito-kig.github.io"
 
 # Layout
 
